docs: add credentials guide and troubleshooting

--- a/.env.example
+++ b/.env.example
@@ -2,24 +2,26 @@
 # Copy this file to .env and fill in your actual values
 
 # Required: Your Deskbird refresh token
+# See README.md "Getting Your Credentials" section for how to obtain this
 REFRESH_TOKEN=your_deskbird_refresh_token
 
 # Required: Google API key for token refresh
+# This is used internally by Deskbird for OAuth token refresh
 GOOGLE_API_KEY=your_google_api_key
 
 # Required: Deskbird workspace configuration
+# These IDs can be found in the Deskbird web app URL or via API
 DESKBIRD_RESOURCE_ID=your_resource_id
 DESKBIRD_ZONE_ITEM_ID=your_zone_item_id
 DESKBIRD_WORKSPACE_ID=your_workspace_id
+
+# Optional: Company ID (auto-discovered from user profile if not set)
+# DEFAULT_COMPANY_ID=your_company_id
 
 # Optional: Enable preview tools (deskbird_api_call)
 # WARNING: Preview tools provide direct API access and should be used with caution
 # Set to 'true' or '1' to enable, any other value or omission disables preview tools
 ENABLE_PREVIEW_TOOLS=false
 
-# Optional: Override default API endpoints
-# DESKBIRD_API_BASE_URL=https://app.deskbird.com/api
-# DESKBIRD_API_VERSION=v1.1
-
-# Optional: Logging level (debug, info, warn, error)
+# Optional: Logging level (debug, info, warn, error, silent)
 # LOG_LEVEL=info
