--- a/vscode_mcp_config.json
+++ b/vscode_mcp_config.json
@@ -2,10 +2,9 @@
   "mcp": {
     "servers": {
       "deskbird": {
-        "command": "npx",
+        "command": "node",
         "args": [
-          "-y",
-          "@mschilling/deskbird-mcp-server"
+          "/Users/matthew/Projects/deskbird-mcp-server/dist/main.js"
         ],
         "env": {
           "ENABLE_PREVIEW_TOOLS": "false"
